--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
+    "quasar": "^2.16.4",
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.77.6",
     "vite": "^5.3.1"
   }
 }
