--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "ffx-fire-ui",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A Quasar Project",
+  "productName": "Fairfax County Fire and Rescue Operations",
+  "author": "Louis <louis.drotos@gmail.com>",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "lint": "eslint --ext .js,.vue ./",
+    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.11",
-    "quasar": "^2.16.4",
-    "vue": "^3.4.29"
+    "pinia": "^2.0.11",
+    "@quasar/extras": "^1.16.4",
+    "quasar": "^2.16.0",
+    "vue": "^3.4.18",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.7.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "sass": "^1.77.6",
-    "vite": "^5.3.1"
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "vite-plugin-checker": "^0.6.4",
+    "eslint-config-prettier": "^8.1.0",
+    "prettier": "^2.5.1",
+    "@quasar/app-vite": "^1.9.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.14"
+  },
+  "engines": {
+    "node": "^20 || ^18 || ^16",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
